patched issue with button hover animation not showing

--- a/midterm/assets/css/style.css
+++ b/midterm/assets/css/style.css
@@ -114,13 +114,14 @@ header{
     align-self: center;
 }
 .navButton{
+    display:inline-block;
     background-color:var(--material-white);
     border:1px solid var(--material-black);
     border-radius:5px;
     box-shadow:4px 4px 4px rgba(0, 0, 0, 0.25);
     padding:5px 20px;
 }
-.navbutton:hover{
+.navButton:hover{
     box-shadow:inset 4px 4px 4px rgb(0 0 0 / 25%);
 }
 .headerOffset{
